compiler/tests-spec/testData/psi/linked/constant-literals/boolean-literals/p-1/pos/2.18.kt
/*
 KOTLIN PSI SPEC TEST (POSITIVE)

 SECTIONS: constant-literals, boolean-literals
 PARAGRAPH: 1
 SENTENCE: [2] These are strong keywords which cannot be used as identifiers unless escaped.
 NUMBER: 18
 DESCRIPTION: The use of Boolean literals as the identifier (with backtick) in the typeAlias.
 NOTE: this test data is generated by FeatureInteractionTestDataGenerator. DO NOT MODIFY CODE MANUALLY!
 */

typealias `true` = Boolean

private typealias `false`<T> = List<T>

internal typealias `true`<`false`> = Map<`true`<`false`>, List<`true`>>
